// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`toMatchMock Should create another method: [mockshot] 1`] = `
{
  "className": "HelloWorld",
  "methodName": "bar",
  "mock": {
    "api": {
      "data": "123"
    }
  },
  "mockName": "success"
}
`;

exports[`toMatchMock Should create another method: [mockshot] 2`] = `
{
  "className": "HelloWorld",
  "methodName": "bar",
  "mock": {
    "error": "yes"
  },
  "mockName": "no-valid-params"
}
`;

exports[`toMatchMock Should match mock shape: [mockshot] 1`] = `
{
  "className": "HelloWorld",
  "methodName": "shape",
  "mock": {
    "data": {
      "_id": "1234"
    },
    "id": "1234sddd56",
    "some": "value"
  },
  "mockName": "success"
}
`;

exports[`toMatchMock Should return correct schema: [mockshot] 1`] = `
{
  "className": "HelloWorld",
  "methodName": "foo",
  "mock": {
    "foo": "barr"
  },
  "mockName": "success"
}
`;
